Fix logo on small mobile screen

--- a/source/_styles/navigation.styl
+++ b/source/_styles/navigation.styl
@@ -73,7 +73,7 @@ nav
             // line-height 14px
 
 
-@media only screen and (max-width: 319px)
+@media only screen and (max-width: 321px)
     .navbar-brand
         img
             margin-top 2px
